# steamos-devkit-service

./: LICENSE  README.md
hackendeck/: approve-ssh-key  configure-hackendeck.py  steam-devkit-tool
hackendeck/steampipe/: app_build_935870.vdf  depot_build_935871.vdf
hooks/: approve-ssh-key  devkit-1-identify
src/: avahi-service.c  avahi-service.h  defines.h  json.c  json.h  main.c  meson.build  steamos-devkit-service.py  utils.c  utils.h
